--- a/Documents/statepl2011.htm
+++ b/Documents/statepl2011.htm
@@ -17,7 +17,7 @@ p.MsoPlainText
 <link rel="stylesheet" type="text/css" href="/css/sms.css" />
 </head>
 
-<body class="style1h" style="background-attachment: fixed">
+<body class="contentheader" style="background-attachment: fixed">
 
 <p>Zac Bendrick<br />
 <span class="style1m">Discus - STATE CHAMP!<br />
