--- a/Documents/stateqs2011.htm
+++ b/Documents/stateqs2011.htm
@@ -17,7 +17,7 @@ p.MsoPlainText
 <link rel="stylesheet" type="text/css" href="/css/sms.css" />
 </head>
 
-<body class="style1h">
+<body class="contentheader">
 
 <p>Zac Bendrick</p>
 <p>Clare Bingaman</p>
