--- a/Results/results10.htm
+++ b/Results/results10.htm
@@ -69,7 +69,7 @@
 			<!-- #BeginEditable "content" -->
 
 			<p>&nbsp;</p>
-			<h2 align="center" class="style1h">2010 Results</h2>
+			<h2 align="center" class="contentheader">2010 Results</h2>
 			<p align="center">
 			<a target="_blank" href="http://results.tickertiming.com/2010/Outdoor/KSHSAA_State/?class=6A">
 			State</a> 28-29-May</p>
