--- a/SMS Scholarship.htm
+++ b/SMS Scholarship.htm
@@ -71,7 +71,7 @@
 			<td valign="top" width="100%">
 			<!-- MSCellType="ContentBody" -->
 			<!-- #BeginEditable "content" --><p>&nbsp;</p>
-			<p class="style1h">2011 SMS Track &amp; Field Scholarship</p>
+			<p class="contentheader">2011 SMS Track &amp; Field Scholarship</p>
 			<p>
 			<a target="_blank" href="Documents/SMS%20Track%20Scholarship%20Letter%202011.pdf">
 			Information</a> <img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"></p>
