--- a/alumni/index.htm
+++ b/alumni/index.htm
@@ -67,7 +67,7 @@
 			<td valign="top" width="100%">
 			<!-- MSCellType="ContentBody" -->
 			<!-- #BeginEditable "content" --><br>
-			<span class="style1h">Alumni<br>
+			<span class="contentheader">Alumni<br>
 			</span><span class="style1n"><br>
 			<br>
 			<br>
