--- a/coaches.htm
+++ b/coaches.htm
@@ -1,158 +1,147 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-us">
 
 <head>
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Coaches</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="/css/sms.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Coaches</title>
 </head>
 
 <body>
-	<div class="header"></div>
-	<div class="maindiv">
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td valign="top" width="100%">
-					<p>&nbsp;</p>
-					<h3 align="center" class="style1h">2019 Coaches</h3>
-					<div align="center">
-						<table height="605" border="0" id="table3">
-							<tbody>
-								<tr>
-									<td><b class="style1">J. J. Wannamaker</b> - (Head Coach, Hurdles)</td>
-								</tr>
-								<tr>
-									<td>(913) 993-7594</td>
-								</tr>
-								<tr>
-									<td><a class="slink" href="mailto:sowannam@smsd.org">sowannam@smsd.org</a></td>
-								</tr>
-								<tr>
-									<td>
-										<a href="https://twitter.com/SMSWannamaker" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow
-											@SMSWannamaker</a>
-										<script>
-											! function (d, s, id) {
-												var js, fjs = d.getElementsByTagName(s)[0],
-													p = /^http:/.test(d.location) ? 'http' : 'https';
-												if (!d.getElementById(id)) {
-													js = d.createElement(s);
-													js.id = id;
-													js.src = p + '://platform.twitter.com/widgets.js';
-													fjs.parentNode.insertBefore(js, fjs);
-												}
-											}(document, 'script', 'twitter-wjs');
-										</script>
-									</td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td><b class="style1">Elayna Briggs</b> - (Pole Vault)</td>
-								</tr>
-								<tr>
-									<td><a class="slink" href="mailto:briggse596@gmail.com">briggse596@gmail.com</a></td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td><b class="style1">Jake Caldwell</b></td>
-								</tr>
-								<tr>
-									<td><a class="slink" href="mailto:jakecaldwell@smsd.org">jakecaldwell@smsd.org</a></td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td><b class="style1">Aaron Dean</b> - (Javelin)</td>
-								</tr>
-								<tr>
-									<td><a class="slink" href="mailto:AaronDean@smsd.orgm">AaronDean@smsd.org</a></td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td><b class="style1">Kailey Groves</b> - (Sprints)</td>
-								</tr>
-								<!--tr>
+	<div class="maindiv grid-container">
+		<div class="header"></div>
+		<div class="mainmenu menubar"></div>
+		<div class="left"></div>
+		<div class="middle">
+			<div class="contentheader">2019 Coaches</div>
+			<table height="605" border="0" id="table3">
+				<tbody>
+					<tr>
+						<td><b class="style1">J. J. Wannamaker</b> - (Head Coach, Hurdles)</td>
+					</tr>
+					<tr>
+						<td>(913) 993-7594</td>
+					</tr>
+					<tr>
+						<td><a class="slink" href="mailto:sowannam@smsd.org">sowannam@smsd.org</a></td>
+					</tr>
+					<tr>
+						<td>
+							<a href="https://twitter.com/SMSWannamaker" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow
+								@SMSWannamaker</a>
+							<script>
+								! function (d, s, id) {
+									var js, fjs = d.getElementsByTagName(s)[0],
+										p = /^http:/.test(d.location) ? 'http' : 'https';
+									if (!d.getElementById(id)) {
+										js = d.createElement(s);
+										js.id = id;
+										js.src = p + '://platform.twitter.com/widgets.js';
+										fjs.parentNode.insertBefore(js, fjs);
+									}
+								}(document, 'script', 'twitter-wjs');
+							</script>
+						</td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+					</tr>
+					<tr>
+						<td><b class="style1">Elayna Briggs</b> - (Pole Vault)</td>
+					</tr>
+					<tr>
+						<td><a class="slink" href="mailto:briggse596@gmail.com">briggse596@gmail.com</a></td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+					</tr>
+					<tr>
+						<td><b class="style1">Jake Caldwell</b></td>
+					</tr>
+					<tr>
+						<td><a class="slink" href="mailto:jakecaldwell@smsd.org">jakecaldwell@smsd.org</a></td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+					</tr>
+					<tr>
+						<td><b class="style1">Aaron Dean</b> - (Javelin)</td>
+					</tr>
+					<tr>
+						<td><a class="slink" href="mailto:AaronDean@smsd.orgm">AaronDean@smsd.org</a></td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+					</tr>
+					<tr>
+						<td><b class="style1">Kailey Groves</b> - (Sprints)</td>
+					</tr>
+					<!--tr>
 					<td>(913) 993-2453</td>
 				</tr-->
-								<tr>
-									<td><a class="slink" href="mailto:KaileyGroves@smsd.org">KaileyGroves@smsd.org</a></td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td><b class="style1">Suni Haberland</b> - (High Jump, JV Sprints)</td>
-								</tr>
-								<tr>
-									<td><a class="slink" href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td><b class="style1">D.J. Hilding</b><span class="style1"><b class="style1"></b></span> - (Distance)</td>
-								</tr>
-								<tr>
-									<td>(913) 993-0633</td>
-								</tr>
-								<tr>
-									<td><a class="slink" href="mailto:dennishilding@smsd.org">dennishilding@smsd.org</a></td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-								<tr>
-									<td><b class="style1">Clint Johnson</b> - (Discus, Shot)</td>
-								</tr>
-								<tr>
-									<td>
-										<a class="slink" href="mailto:coachcjohnson@gmail.com">
-											coachcjohnson@gmail.com</a>
-									</td>
-								</tr>
-								<tr>
-									<td>&nbsp;</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</td>
-				<td height="273"></td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-		</table>
-	</div>
-	<div class="footer"></div>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script>
-		$(".header").load("/header.html");
-		$(".footer").load("/footer.html");
-	</script>
+					<tr>
+						<td><a class="slink" href="mailto:KaileyGroves@smsd.org">KaileyGroves@smsd.org</a></td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+					</tr>
+					<tr>
+						<td><b class="style1">Suni Haberland</b> - (High Jump, JV Sprints)</td>
+					</tr>
+					<tr>
+						<td><a class="slink" href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+					</tr>
+					<tr>
+						<td><b class="style1">D.J. Hilding</b><span class="style1"><b class="style1"></b></span> - (Distance)</td>
+					</tr>
+					<tr>
+						<td>(913) 993-0633</td>
+					</tr>
+					<tr>
+						<td><a class="slink" href="mailto:dennishilding@smsd.org">dennishilding@smsd.org</a></td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+					</tr>
+					<tr>
+						<td><b class="style1">Clint Johnson</b> - (Discus, Shot)</td>
+					</tr>
+					<tr>
+						<td>
+							<a class="slink" href="mailto:coachcjohnson@gmail.com">
+								coachcjohnson@gmail.com</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="right"></div>
+		<div class="footer"></div>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script>
+			$(".header").load("/header.html");
+			$(".mainmenu").load("/mainmenu.html");
+			$(".footer").load("/footer.html");
+		</script>
 		<!-- Start of StatCounter Code for Default Guide -->
-	<script type="text/javascript">
-		var sc_project = 3895026;
-		var sc_invisible = 1;
-		var sc_security = "c1dd7cc1";
-	</script>
-	<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-	<noscript>
-		<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
-				 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
-	</noscript>
-	<!-- End of StatCounter Code for Default Guide -->
+		<script type="text/javascript">
+			var sc_project = 3895026;
+			var sc_invisible = 1;
+			var sc_security = "c1dd7cc1";
+		</script>
+		<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
+		<noscript>
+			<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
+					 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
+		</noscript>
+		<!-- End of StatCounter Code for Default Guide -->
 </body>
 
 </html>
