--- a/honors/honors2010.htm
+++ b/honors/honors2010.htm
@@ -79,7 +79,7 @@
 			<!-- #BeginEditable "content" -->
 <p>&nbsp;</p>
 
-<h1 align="center"><font size="5" class="style1h">
+<h1 align="center"><font size="5" class="contentheader">
 			2010 Post-Season Honors</font></h1>
 				<table bordercolor="#2e4d47"  width="244" align="center" class="style56" >
 					<tr>
@@ -126,7 +126,7 @@
 					<table bordercolor="#2E4D47"  width="244" align="center" class="style55">
 					<tr>
 						<td  width="230">
-						<h2 align="center" class="style1h">All-Sun</h2>
+						<h2 align="center" class="contentheader">All-Sun</h2>
 						</td>
 					</tr>
 					
