--- a/links.htm
+++ b/links.htm
@@ -23,7 +23,7 @@
 					<p>&nbsp;</p>
 					<h2 align="center">
 						<b>
-							<font face="Times New Roman" class="style1h">
+							<font face="Times New Roman" class="contentheader">
 								Links</font>
 						</b>
 					</h2>
