--- a/news.htm
+++ b/news.htm
@@ -21,7 +21,7 @@
 			<tr>
 				<td valign="top" width="100%">
 					<p>&nbsp;</p>
-					<h1 class="style1h">Shawnee Mission South Track &amp; Field News</h1>
+					<h1 class="contentheader">Shawnee Mission South Track &amp; Field News</h1>
 					<div id="newsList"></div>
 				</td>
 				<td height="273"></td>
