--- a/records/boysfreshmanrecords.htm
+++ b/records/boysfreshmanrecords.htm
@@ -24,7 +24,7 @@
 			<tr>
 				<td valign="top" width="100%">
 					<p align="center">
-						<span class="style1h">Records - Freshman Boys</span><span style="font-size: large;"> (<a href="girlsfreshmanrecords.htm">Girls</a>)</span><br>
+						<span class="contentheader">Records - Freshman Boys</span><span style="font-size: large;"> (<a href="girlsfreshmanrecords.htm">Girls</a>)</span><br>
 					</p>
 					<div id="recordTable"></div>
 				</td>
