--- a/records/girlsfreshmanrecords.htm
+++ b/records/girlsfreshmanrecords.htm
@@ -24,7 +24,7 @@
 				<td valign="top" width="100%">
 					<div>
 						<p align="center">
-							<span class="style1h">Records - Freshman Girls </span><span style="font-size: large;">(<a href="boysfreshmanrecords.htm">Boys</a>)</span><br>
+							<span class="contentheader">Records - Freshman Girls </span><span style="font-size: large;">(<a href="boysfreshmanrecords.htm">Boys</a>)</span><br>
 						</p>
 						<div id="recordTable"></div>
 					</div>
