--- a/records/smsrelaysboys.htm
+++ b/records/smsrelaysboys.htm
@@ -25,7 +25,7 @@
 				<td valign="top" width="100%">
 					<div>
 						<p align="center">
-							<span class="style1h">Records - South Relays Boys </span><span style="font-size: large;">(<a href="smsrelaysgirls.htm">Girls</a>)</span><br>
+							<span class="contentheader">Records - South Relays Boys </span><span style="font-size: large;">(<a href="smsrelaysgirls.htm">Girls</a>)</span><br>
 						</p>
 						<div id="recordTable"></div>
 						<p align="center">*events added since 2011<br>**High Octane Group</p>
