--- a/records/smsrelaysgirls.htm
+++ b/records/smsrelaysgirls.htm
@@ -26,7 +26,7 @@
 					<td valign="top" width="100%">
 						<div>
 							<p align="center">
-								<span class="style1h">Records - South Relays Girls </span><span style="font-size: large;">(<a href="smsrelaysboys.htm">Boys</a>)</span><br>
+								<span class="contentheader">Records - South Relays Girls </span><span style="font-size: large;">(<a href="smsrelaysboys.htm">Boys</a>)</span><br>
 							</p>
 							<div id="recordTable"></div>
 							<p align="center">*events added since 2011<br>**High Octane Group</p>
