--- a/results.htm
+++ b/results.htm
@@ -68,7 +68,7 @@
 			<!-- #BeginEditable "content" -->
 
 			<p>&nbsp;</p>
-			<h2 align="center" class="style1h">2011 Results</h2>
+			<h2 align="center" class="contentheader">2011 Results</h2>
 			<p align="center">
 			<a target="_blank" href="http://www.kuathletics.com/sports/c-relay/stats/2010-2011/completeresults2011.html">
 			KU Relays</a> 23-Apr</p>
@@ -109,7 +109,7 @@
 			24-Mar</p>
 			<p align="center">
 			&nbsp;</p>
-			<h2 align="center" class="style1h">2010 Results</h2>
+			<h2 align="center" class="contentheader">2010 Results</h2>
 			<p align="center">
 			<a target="_blank" href="http://results.tickertiming.com/2010/Outdoor/KSHSAA_State/?class=6A">
 			State</a> 28-29-May</p>
