--- a/roster.htm
+++ b/roster.htm
@@ -22,7 +22,7 @@
 			<tr>
 				<td valign="top" width="100%">
 					<p>&nbsp;</p>
-					<p class="style1h">Coming Soon!</p>
+					<p class="contentheader">Coming Soon!</p>
 				</td>
 				<td height="273"></td>
 			</tr>
