--- a/south_relays.htm
+++ b/south_relays.htm
@@ -18,7 +18,7 @@
 			<tr>
 				<td valign="top" width="100%">
 					<p>&nbsp;</p>
-					<p class="style1h">Shawnee Mission South Relays<br>2019</p>
+					<p class="contentheader">Shawnee Mission South Relays<br>2019</p>
 					<p class="style15">Saturday, March 30th</p>
 					<div style="margin:auto; display:none" id="defaultCountdown"></div>
 					<p style="display:none" class="style15">
