--- a/throws/practice.htm
+++ b/throws/practice.htm
@@ -16,7 +16,7 @@
 				<td valign="top" width="100%">
 					<p>&nbsp;</p>
 					<div align="center">
-						<h4 class="style1h">Phase 2</h4>
+						<h4 class="contentheader">Phase 2</h4>
 					</div>
 				</td>
 			</tr>
