--- a/throws/video_archives.htm
+++ b/throws/video_archives.htm
@@ -32,7 +32,7 @@ start()">
 							<!-- MSCellType="ContentBody" -->
 							<!-- #BeginEditable "content" -->
 							<p>&nbsp;</p>
-							<p align="center" class="style1h">&nbsp;Video Archives</p>
+							<p align="center" class="contentheader">&nbsp;Video Archives</p>
 							<p align="center" class="style15">
 								<a target="_blank" href="videos2012.htm">2012</a><br>
 								<a target="_blank" href="videos2011.htm">2011</a><br>
