--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -15,7 +15,7 @@
 			<tr>
 				<td valign="top" width="100%" align="center">
 					<p>&nbsp;</p>
-					<p align="center" class="style1h">&nbsp;Videos</p>
+					<p align="center" class="contentheader">&nbsp;Videos</p>
 					<p align="center" class="style15">
 						<a target="_blank" href="/throws/videos2017.htm">2017</a>
 					</p>
