--- a/throws/videos2011.htm
+++ b/throws/videos2011.htm
@@ -67,7 +67,7 @@
 			<!-- MSCellType="ContentBody" -->
 			<!-- #BeginEditable "content" -->
 			<p>&nbsp;</p>
-<p align="center" class="style1h">&nbsp;Videos</p>
+<p align="center" class="contentheader">&nbsp;Videos</p>
 			<p align="center" class="style1m">
 			2011&nbsp;</p>
 			<p align="center" class="style15">
