--- a/throws/videos2013.htm
+++ b/throws/videos2013.htm
@@ -60,7 +60,7 @@
 			<!-- MSCellType="ContentBody" -->
 			<!-- #BeginEditable "content" -->
 			<p>&nbsp;</p>
-<p align="center" class="style1h">&nbsp;Videos</p>
+<p align="center" class="contentheader">&nbsp;Videos</p>
 			<p align="center" class="style1m">
 			2013&nbsp;</p>
 			<p align="center" class="style15">
