--- a/honors.htm
+++ b/honors.htm
@@ -29,14 +29,14 @@
 				<td valign="top" width="100%">
 					<p>&nbsp;</p>
 					<h1 align="center">
-						<font size="5" class="style1h">
+						<font size="5" class="contentheader">
 							2018 Post-Season Honors<br>
 						</font>
 					</h1>
 					<table bordercolor="#2e4d47" width="244" align="center" class="style56" style="display:none">
 						<tr>
 							<td width="230">
-								<h2 align="center" class="style1h">All-Metro</h2>
+								<h2 align="center" class="contentheader">All-Metro</h2>
 							</td>
 						</tr>
 						<tr>
@@ -52,7 +52,7 @@
 					<table style="display:block" bordercolor="#2e4d47" width="244" align="center" class="style56">
 						<tr>
 							<td width="230">
-								<h2 align="center" class="style1h">All-Sunflower<br>
+								<h2 align="center" class="contentheader">All-Sunflower<br>
 									League</h2>
 							</td>
 						</tr>
