--- a/honors/honors2011.htm
+++ b/honors/honors2011.htm
@@ -75,13 +75,13 @@
 			<!-- #BeginEditable "content" -->
 <p>&nbsp;</p>
 
-<h1 align="center"><font size="5" class="style1h">
+<h1 align="center"><font size="5" class="contentheader">
 			2011 Post-Season Honors<br>
 </font></h1>
 				<table bordercolor="#2e4d47"  width="244" align="center" class="style56" >
 					<tr>
 						<td  width="230" >
-						<h2 align="center" class="style1h" >All-Metro</h2>
+						<h2 align="center" class="contentheader" >All-Metro</h2>
 						</td>
 					</tr>
 				
@@ -124,7 +124,7 @@
 				<table bordercolor="#2e4d47"  width="244" align="center" class="style56" >
 					<tr>
 						<td  width="230" >
-						<h2 align="center" class="style1h" >All-Sunflower<br>
+						<h2 align="center" class="contentheader" >All-Sunflower<br>
 						League</h2>
 						</td>
 					</tr>
