--- a/honors/honors2014.htm
+++ b/honors/honors2014.htm
@@ -75,13 +75,13 @@
 			<!-- #BeginEditable "content" -->
 <p>&nbsp;</p>
 
-<h1 align="center"><font size="5" class="style1h">
+<h1 align="center"><font size="5" class="contentheader">
 			2014 Post-Season Honors<br>
 </font></h1>
 				<table bordercolor="#2e4d47"  width="244" align="center" class="style56" style="display:block">
 					<tr>
 						<td  width="230" >
-						<h2 align="center" class="style1h" >All-Metro</h2>
+						<h2 align="center" class="contentheader" >All-Metro</h2>
 						</td>
 					</tr>
 					<tr>
@@ -98,7 +98,7 @@
 				<table style="display:block" bordercolor="#2e4d47"  width="244" align="center" class="style56" >
 					<tr>
 						<td  width="230" >
-						<h2 align="center" class="style1h" >All-Sunflower<br>
+						<h2 align="center" class="contentheader" >All-Sunflower<br>
 						League</h2>
 						</td>
 					</tr>
