--- a/recordsmenu.html
+++ b/recordsmenu.html
@@ -1,3 +1,3 @@
-<a href="/archives/state_champion_teams.htm">Team Championships</a>
+<!-- <a href="/archives/state_champion_teams.htm">Team Titles</a> -->
 <a href="/archives/state_champs_by_name.htm">State Champions</a>
-<a href="/archives/toptenalltimeboys.htm">Top Ten List</a>
+<a href="/archives/toptenalltimeboys.htm">Performance Lists</a>
