--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <div
-  class="hero style3"
+  class="hero"
   onclick="location.href='/index.htm'"
   style="cursor:pointer; z-index: 1"
 >
@@ -30,6 +30,4 @@
       <p>Shawnee Mission South<br />Track & Field</p>
     </div>
   </div>
-  <!-- sets div height -->
-  <img src="/images/clear.gif" style="visibility: hidden;" />
 </div>
