--- a/links.htm
+++ b/links.htm
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<div class="header"></div>
+	<div class="mainheader"></div>
 	<div class="maindiv">
 		<table border="0" cellpadding="0" cellspacing="0" width="100%">
 			<tr>
@@ -115,7 +115,7 @@
 	<div class="footer"></div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script>
-		$(".header").load("/header.html");
+		$(".mainheader").load("/header.html");
 		$(".footer").load("/footer.html");
 	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
