--- a/records/boysfreshmanrecords.htm
+++ b/records/boysfreshmanrecords.htm
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<div class="header"></div>
+	<div class="mainheader"></div>
 	<div class="recordsheader"></div>
 	<div class="recordsheader2"></div>
 	<div class="content">
@@ -42,7 +42,7 @@
 	<script src="/js/records.js"></script>
 	<script src="/js/events.js"></script>
 	<script>
-		$(".header").load("/header.html");
+		$(".mainheader").load("/header.html");
 		$(".recordsheader").load("/recordsheader.html");
 		$(".recordsheader2").load("/recordsheader2.html");
 		$(".footer").load("/footer.html");
