--- a/schedule.htm
+++ b/schedule.htm
@@ -16,7 +16,7 @@
 
 <body>
 	<div class="maindiv grid-container">
-		<div class="header"></div>
+		<div class="mainheader"></div>
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
@@ -43,7 +43,7 @@
 	<script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
 	<script src="/js/sched.js"></script>
 	<script>
-		$(".header").load("/header.html");
+		$(".mainheader").load("/header.html");
 		$(".mainmenu").load("/mainmenu.html");
 		$(".footer").load("/footer.html");
 		$(document).ready(function () {
