--- a/sponsors/index.htm
+++ b/sponsors/index.htm
@@ -32,7 +32,7 @@
 
 <body>
 <div class="join">
-<div class="header">Thanks to our generous sponsors for supporting the Raider Track and Field Team<br />
+<div class="mainheader">Thanks to our generous sponsors for supporting the Raider Track and Field Team<br />
 </div>
 <p></p>
 <a target="_blank" href="http://www.jocodental.com/">
