--- a/coaches.htm
+++ b/coaches.htm
@@ -13,12 +13,12 @@
 
 <body>
 	<div class="maindiv grid-container">
-		<div class="header"></div>
+		<div class="mainheader"></div>
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
 			<div class="contentheader">2019 Coaches</div>
-			<table height="605" border="0" id="table3">
+			<table align="center" height="605" border="0" id="table3">
 				<tbody>
 					<tr>
 						<td><b class="style1">J. J. Wannamaker</b> - (Head Coach, Hurdles)</td>
@@ -126,7 +126,7 @@
 		<div class="footer"></div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script>
-			$(".header").load("/header.html");
+			$(".mainheader").load("/header.html");
 			$(".mainmenu").load("/mainmenu.html");
 			$(".footer").load("/footer.html");
 		</script>
