--- a/forms.htm
+++ b/forms.htm
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-	<div class="header"></div>
+	<div class="mainheader"></div>
 	<div class="teamheader"></div>
 	<div class="content">
 		<div id="contenttable">
@@ -80,7 +80,7 @@
 		<div class="footer"></div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script>
-			$(".header").load("/header.html");
+			$(".mainheader").load("/header.html");
 			$(".teamheader").load("/teamheader.html");
 			$(".footer").load("/footer.html");
 		</script>
