--- a/guidelines.htm
+++ b/guidelines.htm
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<div class="header"></div>
+	<div class="mainheader"></div>
 	<div class="teamheader"></div>
 	<div class="content">
 		<div id="contenttable">
@@ -496,7 +496,7 @@ normal">OR</b>
 		<div class="footer"></div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script>
-			$(".header").load("/header.html");
+			$(".mainheader").load("/header.html");
 			$(".teamheader").load("/teamheader.html");
 			$(".footer").load("/footer.html");
 		</script>
