--- a/index.htm
+++ b/index.htm
@@ -63,14 +63,9 @@
 
 <body>
 	<div class="maindiv grid-container">
-		<div class="header"></div>
+		<div class="mainheader"></div>
 		<div class="mainmenu menubar"></div>
-		<div class="left relaysbanner" onmouseover="" onclick="document.location.href='south_relays.htm'">
-			<div class="relaysbannertext">
-				<span class="style34"><strong>South Relays</strong></span>
-				<span class="style35"><strong><br>Saturday<br>March 30th<br>2019</strong></span>
-			</div>
-		</div>
+		<div class="left relaysbanner"></div>
 		<div class="middle">
 			<div id="newsDisplay" style="display: none;"></div>
 			<div id="countdownDisplay" style="display: none;" class="style37">
@@ -79,22 +74,11 @@
 			</div>
 			<div id="scheduleDisplay" style="display: none;"></div>
 		</div>
-		<div class="right">
-			<div valign="top" class="style23 indexscroll scrollLine">
-				<script src="/js/vscroll.js"></script>
-			</div>
-			<div class="style24 style28" style="display:none; background: #0c6e45; text-align:center; font-family:sans-serif;font-weight:bold">
-				<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true"><img title="Team Store" width="178px"
-					 src="https://assetly.ordermygear.com/images/w_180,h_100,c_limit/5a71513f1d9d9268258b467c.png" alt="Team Store"></a>
-				<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true">Team Store</a>
-			</div>
-			<div class="style27" style="display:none;">
-				<a target="_blank" href="sponsors/index.htm">Visit Our Sponsors</a></span></p>
-			</div>
-		</div>
+		<div class="right"></div>
 		<div class="footer"></div>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script src="/js/vscroll.js"></script>
 	<script src="/js/jquery.countdown.min.js"></script>
 	<script src="http://www.google.com/jsapi"></script>
 	<script src="/js/schedfp.js"></script>
@@ -102,8 +86,10 @@
 	<script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
 	<script src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE"></script>
 	<script>
-		$(".header").load("/header.html");
+		$(".mainheader").load("/header.html");
 		$(".mainmenu").load("/mainmenu.html");
+		$(".left").load("/left.html");
+		$(".right").load("/right.html");
 		$(".footer").load("/footer.html");
 	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
@@ -111,13 +97,13 @@
 		var sc_project = 3895026;
 		var sc_invisible = 1;
 		var sc_security = "c1dd7cc1";
-	</script>
+		</script>
 	<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
 	<noscript>
 		<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
-				 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
-	</noscript>
-	<!-- End of StatCounter Code for Default Guide -->
+			class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
+		</noscript>
+		<!-- End of StatCounter Code for Default Guide -->
 </body>
 
 </html>
