--- a/news.htm
+++ b/news.htm
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<div class="header"></div>
+	<div class="mainheader"></div>
 	<div class="maindiv">
 		<table border="0" cellpadding="0" cellspacing="0" width="100%">
 			<tr>
@@ -38,7 +38,7 @@
 	<script src="/js/blogger.js"></script>
 	<script src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE"></script>
 	<script>
-		$(".header").load("/header.html");
+		$(".mainheader").load("/header.html");
 		$(".footer").load("/footer.html");
 	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
