--- a/south_relays.htm
+++ b/south_relays.htm
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<div class="header"></div>
+	<div class="mainheader"></div>
 	<div class="maindiv">
 		<table border="0" cellpadding="0" cellspacing="0" width="100%">
 			<tr>
@@ -39,7 +39,7 @@
 	<div class="footer"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
-		$(".header").load("/header.html");
+		$(".mainheader").load("/header.html");
 		$(".recordsheader").load("/recordsheader.html");
 		$(".footer").load("/footer.html");
 	</script>
