--- a/team.htm
+++ b/team.htm
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<div class="header"></div>
+	<div class="mainheader"></div>
 	<div class="teamheader"></div>
 	<div class="content">
 		<table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -59,7 +59,7 @@
 	<div class="footer"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
-		$(".header").load("/header.html");
+		$(".mainheader").load("/header.html");
 		$(".teamheader").load("/teamheader.html");
 		$(".footer").load("/footer.html");
 	</script>	
