--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,19 @@
 			</div>
 			<div id="scheduleDisplay" style="display: none;"></div>
 		</div>
-		<div class="right"></div>
+		<div class="right">
+			<div valign="top" class="style23 indexscroll scrollLine">
+				<script src="/js/vscroll.js"></script>
+			</div>
+			<div class="style24 style28" style="display:none; background: #0c6e45; text-align:center; font-family:sans-serif;font-weight:bold">
+				<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true"><img title="Team Store" width="178px"
+						src="https://assetly.ordermygear.com/images/w_180,h_100,c_limit/5a71513f1d9d9268258b467c.png" alt="Team Store"></a>
+				<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true">Team Store</a>
+			</div>
+			<div class="style27" style="display:none;">
+				<a target="_blank" href="sponsors/index.htm">Visit Our Sponsors</a></span></p>
+			</div>
+		</div>
 		<div class="footer"></div>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -89,7 +101,7 @@
 		$(".mainheader").load("/header.html");
 		$(".mainmenu").load("/mainmenu.html");
 		$(".left").load("/left.html");
-		$(".right").load("/right.html");
+		// $(".right").load("/right.html");
 		$(".footer").load("/footer.html");
 	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
