--- a/team.htm
+++ b/team.htm
@@ -1,66 +1,63 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-us">
 
 <head>
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Team</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 	<link rel="stylesheet" type="text/css" href="css/sms.css">
-	<style type="text/css">
-		.style23 {
-			text-align: center;
-		}
-	</style>
+	<title>Team</title>
 </head>
 
 <body>
-	<div class="mainheader"></div>
-	<div class="teamheader"></div>
-	<div class="content">
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<!-- MSTableType="layout" -->
-			<tr>
-				<td valign="top" width="100%">
-					<div>
-						<h2>Welcome:</h2>
-						<p>
-							Welcome to the SM South Raider Track &amp; Field Team.&nbsp; By choosing to be part of this team, you have made
-							your part of a great institution at SM South High School.&nbsp; This team has a deep tradition of excellence in
-							the state of Kansas.&nbsp;
-							This tradition includes many state team championships, state team placings, individual state champions, and 5
-							Kansas All-time best performers.&nbsp; SM South has also had countless individual and relay state medalists.</p>
-						<p>
-							Not every athlete that has worn a Raider track &amp; field uniform has gone on to become a top notch performer,
-							but they have all been an integral part of the team.&nbsp; No one student-athlete is any less important than
-							another.&nbsp; This program is
-							a family and we all share in the success and heartbreaks together as a team.&nbsp;
-						</p>
-						<p>
-							You will get as much out of this experience as you let yourself.&nbsp; Try new events, work hard everyday, and
-							be a team player.&nbsp; If you do those things, success will come in many different ways.&nbsp; This team has no
-							cuts and no bench.&nbsp; Everyone
-							gets to take part and can be successful in their own way. It's not about wins and losses, but the improvements
-							that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to you.&nbsp;
-						</p>
-
-						<p>&nbsp;</p>
-					</div>
-				</td>
-				<td height="273"></td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-		</table>
+	<div class="maindiv grid-container">
+		<div class="mainheader"></div>
+		<div class="mainmenu menubar"></div>
+		<div class="teammenu menubar"></div>
+		<div class="left"></div>
+		<div class="middle">
+			<div class="contentheader">Welcome</div>
+			<!-- <h2>Welcome:</h2> -->
+			<p>
+				Welcome to the SM South Raider Track &amp; Field Team.&nbsp; By choosing to be part of this team, you have
+				made
+				yourself part of a great institution at SM South High School.&nbsp; This team has a deep tradition of excellence
+				in
+				the state of Kansas.&nbsp;
+				This tradition includes many state team championships, state team placings, individual state champions, and
+				5
+				Kansas All-time best performers.&nbsp; SM South has also had countless individual and relay state medalists.
+			</p>
+			<p>
+				Not every athlete that has worn a Raider track &amp; field uniform has gone on to become a top notch
+				performer,
+				but they have all been an integral part of the team.&nbsp; No one student-athlete is any less important than
+				another.&nbsp; This program is
+				a family and we all share in the success and heartbreaks together as a team.&nbsp;
+			</p>
+			<p>
+				You will get as much out of this experience as you let yourself.&nbsp; Try new events, work hard everyday,
+				and
+				be a team player.&nbsp; If you do those things, success will come in many different ways.&nbsp; This team
+				has no
+				cuts and no bench.&nbsp; Everyone
+				gets to take part and can be successful in their own way. It's not about wins and losses, but the
+				improvements
+				that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to
+				you.&nbsp;
+			</p>
+		</div>
 	</div>
+	<div class="left"></div>
 	<div class="footer"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
 		$(".mainheader").load("/header.html");
-		$(".teamheader").load("/teamheader.html");
+		$(".mainmenu").load("/mainmenu.html");
+		$(".teammenu").load("/teammenu.html");
 		$(".footer").load("/footer.html");
 	</script>	
 	<!-- Start of StatCounter Code for Default Guide -->
